adding spotless in common module
Signed-off-by: Dhrubo Saha <dhrubo@amazon.com>