@@ -5,6 +5,11 @@
 
 package org.opensearch.ml.common.transport.connector;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotSame;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertSame;
+
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.util.Arrays;
@@ -23,18 +28,13 @@ import org.opensearch.ml.common.connector.ConnectorAction;
 import org.opensearch.ml.common.connector.MLPostProcessFunction;
 import org.opensearch.ml.common.connector.MLPreProcessFunction;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotSame;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertSame;
-
 public class MLCreateConnectorRequestTests {
     private MLCreateConnectorInput mlCreateConnectorInput;
 
     private MLCreateConnectorRequest mlCreateConnectorRequest;
 
     @Before
-    public void setUp(){
+    public void setUp() {
         ConnectorAction.ActionType actionType = ConnectorAction.ActionType.PREDICT;
         String method = "POST";
         String url = "https://test.com";
@@ -43,34 +43,58 @@ public class MLCreateConnectorRequestTests {
         String mlCreateConnectorRequestBody = "{\"input\": \"${parameters.input}\"}";
         String preProcessFunction = MLPreProcessFunction.TEXT_DOCS_TO_OPENAI_EMBEDDING_INPUT;
         String postProcessFunction = MLPostProcessFunction.OPENAI_EMBEDDING;
-        ConnectorAction action = new ConnectorAction(actionType, method, url, headers, mlCreateConnectorRequestBody, preProcessFunction, postProcessFunction);
+        ConnectorAction action = new ConnectorAction(
+            actionType,
+            method,
+            url,
+            headers,
+            mlCreateConnectorRequestBody,
+            preProcessFunction,
+            postProcessFunction
+        );
 
-        mlCreateConnectorInput = MLCreateConnectorInput.builder()
-                .name("test_connector_name")
-                .description("this is a test connector")
-                .version("1")
-                .protocol("http")
-                .parameters(Map.of("input", "test input value"))
-                .credential(Map.of("key", "test_key_value"))
-                .actions(List.of(action))
-                .access(AccessMode.PUBLIC)
-                .backendRoles(Arrays.asList("role1", "role2"))
-                .addAllBackendRoles(false)
-                .build();
+        mlCreateConnectorInput = MLCreateConnectorInput
+            .builder()
+            .name("test_connector_name")
+            .description("this is a test connector")
+            .version("1")
+            .protocol("http")
+            .parameters(Map.of("input", "test input value"))
+            .credential(Map.of("key", "test_key_value"))
+            .actions(List.of(action))
+            .access(AccessMode.PUBLIC)
+            .backendRoles(Arrays.asList("role1", "role2"))
+            .addAllBackendRoles(false)
+            .build();
         mlCreateConnectorRequest = MLCreateConnectorRequest.builder().mlCreateConnectorInput(mlCreateConnectorInput).build();
     }
 
     @Test
-    public void writeToSuccess() throws IOException  {
+    public void writeToSuccess() throws IOException {
         BytesStreamOutput output = new BytesStreamOutput();
         mlCreateConnectorRequest.writeTo(output);
         MLCreateConnectorRequest parsedRequest = new MLCreateConnectorRequest(output.bytes().streamInput());
         assertEquals(mlCreateConnectorRequest.getMlCreateConnectorInput().getName(), parsedRequest.getMlCreateConnectorInput().getName());
-        assertEquals(mlCreateConnectorRequest.getMlCreateConnectorInput().getAccess(), parsedRequest.getMlCreateConnectorInput().getAccess());
-        assertEquals(mlCreateConnectorRequest.getMlCreateConnectorInput().getProtocol(), parsedRequest.getMlCreateConnectorInput().getProtocol());
-        assertEquals(mlCreateConnectorRequest.getMlCreateConnectorInput().getBackendRoles(), parsedRequest.getMlCreateConnectorInput().getBackendRoles());
-        assertEquals(mlCreateConnectorRequest.getMlCreateConnectorInput().getActions(), parsedRequest.getMlCreateConnectorInput().getActions());
-        assertEquals(mlCreateConnectorRequest.getMlCreateConnectorInput().getParameters(), parsedRequest.getMlCreateConnectorInput().getParameters());
+        assertEquals(
+            mlCreateConnectorRequest.getMlCreateConnectorInput().getAccess(),
+            parsedRequest.getMlCreateConnectorInput().getAccess()
+        );
+        assertEquals(
+            mlCreateConnectorRequest.getMlCreateConnectorInput().getProtocol(),
+            parsedRequest.getMlCreateConnectorInput().getProtocol()
+        );
+        assertEquals(
+            mlCreateConnectorRequest.getMlCreateConnectorInput().getBackendRoles(),
+            parsedRequest.getMlCreateConnectorInput().getBackendRoles()
+        );
+        assertEquals(
+            mlCreateConnectorRequest.getMlCreateConnectorInput().getActions(),
+            parsedRequest.getMlCreateConnectorInput().getActions()
+        );
+        assertEquals(
+            mlCreateConnectorRequest.getMlCreateConnectorInput().getParameters(),
+            parsedRequest.getMlCreateConnectorInput().getParameters()
+        );
     }
 
     @Test
@@ -80,8 +104,7 @@ public class MLCreateConnectorRequestTests {
 
     @Test
     public void validateWithNullMLCreateConnectorInputException() {
-        MLCreateConnectorRequest mlCreateConnectorRequest = MLCreateConnectorRequest.builder()
-                .build();
+        MLCreateConnectorRequest mlCreateConnectorRequest = MLCreateConnectorRequest.builder().build();
         ActionRequestValidationException exception = mlCreateConnectorRequest.validate();
         assertEquals("Validation Failed: 1: ML Connector input can't be null;", exception.getMessage());
     }
